# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = OpenCLSim
description = Complex Logistics Simulation - Rule based planning of cyclic activities and in depth comparison of different system concepts.
author = TU Delft / CITG
author-email = m.vankoningsveld@tudelft.nl
license = mit
url = https://github.com/TUDelft-CITG/OpenCLSim
long-description = file: README.md
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under

# https://pypi.python.org/pypi?%3Aaction=list_classifiers

classifiers =

    Development Status :: 4 - Beta

    Programming Language :: Python


[options]
zip_safe = False
packages = find:
include_package_data = True
# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
setup_requires = pyscaffold>=3.1a0,<3.2a0
# Add here dependencies of your project (semicolon/line-separated), e.g.

install_requires = 
    simpy
    networkx
    halem
    shapely
    scipy
    plotly
    pyscaffold
    simplekml
    matplotlib
    click
    nose
    flask
    flask_cors
    abc

# The usage of test_requires is discouraged, see `Dependency Management` docs
# tests_require = pytest; pytest-cov
# Require a specific Python version, e.g. Python 2.7 or >= 3.4
# python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*

[options.packages.find]
where = openclsim

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install transport-network-analysis[PDF]` like:
# PDF = ReportLab; RXP
# Add here test requirements (semicolon/line-separated)
testing =
    pytest
    pytest-cov
    pytest-timeout

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = transport_network_analysis.module:function
# For example:
# console_scripts =
#     fibonacci = transport_network_analysis.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts = 
    --cov --cov-report term-missing --cov-report html
    --verbose
norecursedirs =
    dist
    build
    .tox
    .eggs
testpaths = tests

[aliases]
docs = build_sphinx
test=pytest

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
